Got the Firebase email to work.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,11 @@
     }
   },
   "exclude": ["./out/**/*", "./node_modules/**/*"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/submitEmail.js"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/submitEmail.js",
+    "src/pages/api/test.js"
+  ]
 }
