--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "next": "^13.4.12",
     "next-seo": "^6.1.0",
