--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ storageBucket="fork-7bab5.appspot.com"
 messagingSenderId="703517294398"
 appId="1:703517294398:web:f43ab067ca0e20c92eb66f"
 measurementId="G-N1QXY4QNZ3"
+NEXT_PUBLIC_GOOGLE_ANALYTICS="G-6HSFQEXGH8"
